[package]
name = "solana_neoburger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.40"
solana-sdk = "1.15.2"
solana-sdk-bpf-test = "1.2.4"
solana-program = "1.15.2"
